# drumroll

./: ChangeLog  Changing_Drum_Sounds.md  Connecting_To_Hydrogen.md  INSTALL  Installation.md  Makefile  Makefile.am  ProjectHome.md  README  TODO  alsamidi.c  alsamidi.h  config.h.in  configure.in  drumroll.c  jackmidi.c  jackmidi.h  sdlaudio.c  sdlaudio.h  usb_drumkit.c  usb_drumkit.h  usb_utils.c  usb_utils.h
trunk/: AUTHORS  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  README  TODO  alsamidi.c  alsamidi.h  config.h.in  configure.in  drumroll.c  fakekey.c  fakekey.h  jackmidi.c  jackmidi.h  sdlaudio.c  sdlaudio.h  usb_drumkit.c  usb_drumkit.h  usb_utils.c  usb_utils.h
trunk/tools/: drumroll_to_hydrogen
wiki/: Changing_Drum_Sounds.wiki  Connecting_To_Hydrogen.wiki  Installation.wiki
