# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([drumroll], [5.0], [ffmpeg.php@gmail.com])
AM_INIT_AUTOMAKE(drumroll, 5.0)
AC_CONFIG_SRCDIR([drumroll.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([SDL_mixer], [Mix_OpenAudio])
AC_CHECK_LIB([asound], [snd_seq_open])
AC_CHECK_LIB([usb], [usb_init])
AC_CHECK_LIB([jack], [jack_client_new])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
