# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([drumroll], [6.0], [ffmpeg.php@gmail.com])
AM_INIT_AUTOMAKE(drumroll, 6.0)
AC_CONFIG_SRCDIR([drumroll.c])
dnl AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries. FIXME: Do proper AC_DEFUN for these
AC_CHECK_LIB([SDL_mixer], [Mix_OpenAudio])
AM_CONDITIONAL([INCLUDE_SDL_SOURCES], [test "$ac_cv_lib_SDL_mixer_Mix_OpenAudio" = yes])

AC_CHECK_LIB([asound], [snd_seq_open])
AM_CONDITIONAL([INCLUDE_ALSA_SOURCES], [test "$ac_cv_lib_asound_snd_seq_open" = yes])

AC_CHECK_LIB([usb], [usb_init])

AC_CHECK_LIB([jack], [jack_client_new])
AM_CONDITIONAL([INCLUDE_JACK_SOURCES], [test "$ac_cv_lib_jack_jack_client_new" = yes])

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([strerror])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
